# vibe-kanban-copilotkit

./: .gitignore  CLAUDE.md  README.md  notes.txt  package-lock.json  package.json  pnpm-lock.yaml
agent/: agent.py  requirements.txt  server.py
agent_server/: agent.py  pyproject.toml  server.py
express/: notes.txt  package-lock.json  package.json  server.ts
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
